--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,13 @@
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-ssm</artifactId>
-			<version>1.11.847</version>
+			<version>1.11.880</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-cloudwatch</artifactId>
+			<version>1.11.880</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
