--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 aws.appconfig.appname=appconfig.appname
 aws.appconfig.environment=appconfig.environment
-aws.appconfig.configprofile=appconfig.configprofile
+#aws.appconfig.configprofile=appconfig.configprofile.blue
+aws.appconfig.configprofile=appconfig.configprofile.green
 appconfig.client.id=demo-spring-boot-app
